--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,7 +19,7 @@
 	</div>
 	
 	<div fxFlex *ngIf="selectedDish">
-		<mat-card>
+		<!-- <mat-card>
 			<mat-card-header>
 				<mat-card-title>
 					<h3>{{selectedDish.name | uppercase}}</h3>
@@ -34,7 +34,8 @@
 				<button mat-button>LIKE</button>
 				<button mat-button>SHARE</button>
 			</mat-card-actions>
-		</mat-card>
+		</mat-card> -->
+		<app-dishdetail></app-dishdetail>
 	</div>
   
 </div>
