--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -13,7 +13,7 @@
   				<h3>{{dish.name | uppercase}}</h3>
   			</mat-card-title>
   		</mat-card-header>
-  		<img mat-card-image src={{dish.image}} alt={{dish.name}}>
+  		<img mat-card-image src="{{BaseURL + dish.image}}" alt={{dish.name}}>
   		<mat-card-content>
   			<p>{{dish.description}}
   			</p>
@@ -76,10 +76,12 @@
     
     </div>
 
+    <div [hidden]="dish">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
+
   </div>
 
-  <div [hidden]="dish">
-    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
-  </div>
+  
 
 </div>
