--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -7,7 +7,7 @@
     fxLayoutGap.xs="0">
 
   <div fxFlex="40">
-  	<mat-card *ngIf="dish">
+  	<mat-card *ngIf="dish" [@visibility]="visibility">
   		<mat-card-header>
   			<mat-card-title>
   				<h3>{{dish.name | uppercase}}</h3>
@@ -35,7 +35,7 @@
 
   <div fxFlex="40">
 	  
-    <mat-list *ngIf="dish">
+    <mat-list *ngIf="dish" [@visibility]="visibility">
       <h1>Comments</h1>
       <mat-list-item *ngFor="let dishcomment of dish.comments">
         <p matLine> {{dishcomment.comment}} </p>
@@ -53,7 +53,7 @@
       </mat-list-item>
     </mat-list>
 
-    <div *ngIf="dish">
+    <div *ngIf="dish" [@visibility]="visibility">
       <form novalidate [formGroup]="commentForm" #cform="ngForm" (ngSubmit)="onSubmit()">
       <p>
         <mat-form-field class="full-width">          
